tests/invalid/simple/DefiniteAssign_CompileFail_1.whiley
void g(int x):
     return

int f(int x, int y) requires x>=0 && y>0:
    int z
    g(z)
